Fixes #26 The zones were getting out of the screen.

--- a/app/assets/stylesheets/home/_home_zones.css.scss
+++ b/app/assets/stylesheets/home/_home_zones.css.scss
@@ -24,7 +24,6 @@
 		margin: auto;
 		height: 250px;
 		position: relative;
-		font-size: 11px;
 	}
 	
 	
@@ -41,7 +40,7 @@
 			width: 100%;
 			
 			#allZonesContainer {
-				width: 1270px;
+				width: 900px;
 			}
 			#featuredZonesContainer {
 				width: auto;
@@ -58,7 +57,7 @@
 					margin: auto;
 				}
 				.allZoneContainer {
-					width: 180px;
+					width: 138px;
 					height: 20px;
 					float: left;
 					margin-bottom: 2px;
@@ -109,15 +108,15 @@
 			display: block;
 			position: absolute;
 			left: 20px;
-			top: 0px;
-			font-size: 15px;	
+			top: 2px;
+			font-family: arial;
+			font-size: 12px;	
 		}
 		
 		.zoneLeftIndicator {
 			width: 16px;
 			height: 16px;
 			position: absolute;
-			top: 1px;
 			background: url(/assets/wizard_check_unchecked.png) no-repeat;		
 		}
 		
